force-app/main/default/objects/Item_Receipt__c/Item_Receipt__c.object-meta.xml
<CustomObject>
    <label>BT Item Receipt</label>
    <nameField>
        <displayFormat>IR-{000}</displayFormat>
        <label>Item Receipt  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Item Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>