force-app/main/default/objects/Item_Receipt__c/fields/Bill__c.field-meta.xml
<CustomField>
    <fullName>Bill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Bill the Item Receipt was converted to.</inlineHelpText>
    <label>Bill</label>
    <referenceTo>Account_Payable__c</referenceTo>
    <relationshipName>Item_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>