force-app/main/default/objects/Item_Receipt__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Purchase Order the Items were Received Against.</inlineHelpText>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipName>Item_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>