force-app/main/default/objects/Item_Receipt__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Item_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>